# treehacks-25

./: .gitignore  README.md  pyproject.toml  requirements.txt  start-api.sh
JAM_BAND/: jam_band.py
MIDI_TO_SOUNDFONT/: fluidsynth_player.py  full_band_pipeline.py  midi_to_mp3.py  pipeline.py  realtime_player.py  requirements.txt  riff_bank.py  test_instrument_notes.py
MIDI_TO_SOUNDFONT/FluidSynth_Player/: fluidsynth_player.py
MIDI_TO_SOUNDFONT/MIDI_generation/: drum_transcriber.py  generate_MIDI.py  manage_instruments.py  perplexity_search.py  stem_separator.py  youtube_to_midi.py
SONG_GENERATION/: generate_song.py  render_midi_to_wav.py  requirements.txt
app/: __init__.py  __main__.py  api_server.py  cv_session.py  instrument_setup.py  main.py  midi_prep.py  requirements.txt  session.py  song_search.py
app/fretboard/: ContentView.swift  FretboardView.swift  SceneDelegate.swift  fretboardApp.swift
app/fretboard.xcodeproj/: project.pbxproj
soundfonts/: README.md
src/: audio_engine.py  config.py  drawing.py  hand_tracking.py  main.py  models.py  note_engine.py  pole_detection.py  server.py  websocket_server.py
tutoring/: requirements.txt
tutoring/MIDI_TO_SOUNDFONT/: play_midi.py  test_midi.py
vision/: CONTEXT.md  audio_engine.py  config.py  drawing.py  hand_tracking.py  main.py  models.py  note_engine.py  pole_detection.py  pyproject.toml  server.py  song.mid  websocket_server.py
vision/fretboard/: package-lock.json  package.json
vision/gaston/: package.json
vision/website/: RUN.md  (+1 more)
website/: package-lock.json  package.json  pnpm-lock.yaml
(+92 files in other folders)
